[tool.poetry]
name = "plotly-map"
version = "0.1.0"
description = "the plotly map thingy"
authors = ["Armin Heravi <armin.heravi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
dash = "^2.18.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
